ADD - store and show logic
